implement trusted density provenance
